--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern-marketplace",
   "version": "2.0.0",
   "description": "A MERN stack based online marketplace application",
-  "author": "Shama Hoque",
+  "author": "smartgru",
   "license": "MIT",
   "keywords": [
     "react",
@@ -13,9 +13,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/shamahoque/mern-marketplace.git"
+    "url": "https://github.com/smartgru/MENR-Marketplace.git"
   },
-  "homepage": "https://github.com/shamahoque/mern-marketplace",
   "main": "./dist/server.generated.js",
   "scripts": {
     "development": "nodemon",
